# daemon-moderans-linux

./: .gitignore  Configure Python web apps for IIS - Visual Studio (Windows) - Microsoft Learn.url  Contributing.md  Dockerfile.app  How can I use FastAPI in IIS- · Discussion #4207 · tiangolo-fastapi.url  MYCSR.csr  PRIVATEKEY.key  README.md  TODO.md  backend.dockerfile  docker-compose-traefik.yml  docker-compose.yaml  docker-compose.yml  docker-refresher.py  docker_refresher.py  format.bat  ipfs_upload_test.py  localhost+2-key.pem  localhost+2.pem  locustfile.py  main.py  nucleibackend.systems+2-key.pem  nucleibackend.systems+2.pem  opensource-piviot.md  pyproject.toml  python - Running FastAPI under IIS - Stack Overflow.url  redis_test.py  requirements.txt  restart.cmd  tree_file.txt
.deta/: prog_info  state
.github/workflows/: apisec-scan.yml  bandit.yml  codacy.yml  codeql.yml  devskim.yml  ethicalcheck.yml  neuralegion.yml
letsencrypt/: acme.json
manifests/: PersistantVolume.yaml  ipfs-deployment.yaml  kubernetes_start.py  nuclei_backend-deployment.yaml  postgres-deployment.yaml  redis-server-deployment.yaml  runner.bat
nuclei_backend/: Config.py  __init__.py
nuclei_backend/database/: __init__.py
nuclei_backend/permanent_store/: chunking.py  file_handlers.py  main.py  permanent_store_model.py  permanent_store_routes.py
nuclei_backend/storage_service/: CompressionBase.py  __init__.py  config.py  ipfs_model.py  ipfs_routes.py  ipfs_schema.py  ipfs_utils.py  main.py
nuclei_backend/syncing_service/: scheduler_config.py  (+4 more)
tests/: test_user_models.py
(+21 files in other folders)
